2000-06-27  Michael Meeks  <michael@helixcode.com>

	* hello-view.c (view_clicked_cb): prettify.
	kill redundant prototypes.

2000-06-26  Michael Meeks  <michael@helixcode.com>

	* hello-object-io.c (hello_object_stream_read): kill, move to
	(hello_object_pstream_load): and drasticaly simplify removing henious
	coding. (hello_object_pstream_save): ditto.

2000-05-26  Dan Winship  <danw@helixcode.com>

	* hello-object.c, hello-object-io.[ch] (hello_object_stream_read,
	hello_object_pstream_load, hello_object_pstream_save,
	hello_object_pstream_get_max_size,
	hello_object_pstream_get_content_types): Update PersistStream
	implementation.

2000-04-24  ERDI Gergo  <cactus@cactus.rulez.org>

	* hello-object-print.c (hello_object_print): Bonobo::Print implementation

	* hello-object-io.c: Separated IO functions

	* Makefile.am: Install the oafinfo file

2000-04-23  ERDI Gergo  <cactus@cactus.rulez.org>

	* hello-object.[ch]: Exit cleanly when the instance count drops to 0

	* hello.oafinfo: Added OAF description file (Unique ID is simply
	the version number)

	* bonobo-hello.c (init_server_factory): Added compile-time option
	to use OAF instead of GOAD
