@@ -37,7 +37,7 @@ struct _BonoboClientSite {
 	BonoboObjectClient *bound_embeddable; /* IDL:Bonobo/Embeddable:1.0 */
 	GList		   *view_frames;
 	GList              *canvas_items;
-	int                child_shown:1;
+	unsigned int        child_shown:1;
 
 	BonoboClientSitePrivate *priv;
 };
